--- a/templates/index.html
+++ b/templates/index.html
@@ -228,7 +228,8 @@
 
       #modern {
         top: 350px;
-        left: 58%;
+        right: 28%;
+        /* left: 58%; */
       }
 
       #future {
@@ -280,15 +281,15 @@
       /* Connectors */
       #prehistory-classical {
         top: 80px;
-        left: 14%;
-        width: 70.2%;
+        left: 18%;
+        width: 62%;
       }
 
       #classical-medieval {
-        top: 101px;
+        top: 108px;
         right: 10%;
         width: 2px;
-        height: 138px;
+        height: 134px;
         border-left: 5px dotted #45a29e;
         border-top: none;
       }
@@ -301,8 +302,8 @@
 
       #medieval-early {
         top: 238px;
-        left: 33%;
-        width: 36%;
+        left: 38.5%;
+        width: 26%
       }
 
       #early-horiz {
@@ -329,7 +330,7 @@
       #modern-horiz {
         top: 366px;
         right: 6.5%;
-        width: 25.5%;
+        width: 21.5%;
       }
 
       #modern-twentieth {
@@ -344,7 +345,7 @@
       #future-twenty {
         top: 520px;
         right: 6.15%;
-        width: 71.5%;
+        width: 69%;
       }
 
       #future-line {
